# httpdownload

./: I want to create a CLI python app called httpdownl.md  README.md  pyproject.toml
httpdownload/: __init__.py  cli.py
