[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httpdownload"
version = "0.1.0"
description = "Simple HTTP file downloader with progress bar"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "rich",
]

[project.scripts]
httpdownload = "httpdownload.cli:main"